omweather (0.27.14) unstable; urgency=low

  * Updated Finish, Spain, Russian translations

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 2 July 2010 21:04:20 +0200

omweather (0.27.13) unstable; urgency=low

  * Updated Russian translations
  * Rewrote GPS function
  * Fixed crashing of hildon-home

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 2 July 2010 21:04:20 +0200

omweather (0.27.12) unstable; urgency=low

  * Fixed warnings 
  * Fixed problem first start with animation (Button 'Done')
  * Updated Germany, Finland, Poland translations

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 22 June 2010 19:56:20 +0200

omweather (0.27.11) unstable; urgency=low

  * Corrected number of version in window 'About' 
  * Updated French translation

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 21 June 2010 19:56:20 +0200

omweather (0.27.10) unstable; urgency=low

  * Fixed memory leaks for Diablo 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 21 June 2010 17:56:20 +0200

omweather (0.27.1) unstable; urgency=low

  * Tested memory leak 
  * Fixed problem with default choice in layouts selecting

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 17 June 2010 07:39:20 +0200

omweather (0.27) unstable; urgency=low

  * Added new external view 'Custom' for Fremantle
  * Adapted to Diablo 

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 01 May 2010 20:39:20 +0200

omweather (0.26.4) unstable; urgency=low

  * Updated Spanish translation 
  * Fixed problem with applet's reloading after changing settings of external
    view
  * Fixed various gcc warnings   

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 01 May 2010 20:39:20 +0200

omweather (0.26.3) unstable; urgency=low

  * Improvement in downloading algorithm
  * Fixed bug #10016 "Widget style option "Now, today and tomorrow" actually "Now + 2 days"
  * Disabled an animation if applet isn't visible
  * Fixed bug #7753 "updating omweather causes desktop applet to reappear"
  * Updated Finish, Germany and Russian translation

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 01 May 2010 20:39:20 +0200
