@@ -1,6 +1,7 @@
 omweather (0.27.14) unstable; urgency=low
 
   * Updated Finish, Spain, Russian translations
+  * Fixed problem with correct jump to selected day in popup window 
 
  -- Vlad Vasiliev <vlad@gas.by>  Fri, 2 July 2010 21:04:20 +0200
 
